Fixed layout issues when no albums are added.

--- a/Client/inc/style.css
+++ b/Client/inc/style.css
@@ -183,9 +183,6 @@ a:hover
 
 #albumImageLarge
 {
-	width: 100%;
-	height: 100%;
-
 	margin: auto;
 
 	transition: all 400ms ease-in-out 400ms;
